--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,18 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/carlos?serverTimezone=UTC 
+
+#spring.datasource.url= jdbc:mysql://localhost:3306/db?useSLL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
+
+#username and password de la base de datos
 spring.datasource.username=carlos
 spring.datasource.password=carlos
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.generate-ddl=false
-spring.jpa.properties.hibernate.hbm2ddl.auto=none
 server.port = 5000
 
+#Mostrar SQL queries que se realizan
+spring.jpa.show-sql = true 
+
+#Actualiza la base de datos y crea la entidad
+spring.jpa.hibernate.ddl-auto = update
+
+#generate optimization hibernate SQL
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
