--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/carlos?serverTimezone=UTC 
-
+#spring.datasource.url=jdbc:mysql://localhost:3306/carlos?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://d3y0lbg7abxmbuoi.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/xsjyd7r8ij58tnac?serverTimezone=UTC  
 #spring.datasource.url= jdbc:mysql://localhost:3306/db?useSLL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
 
 #username and password de la base de datos
-spring.datasource.username=carlos
-spring.datasource.password=carlos
+spring.datasource.username=fjsknhyvrpno2gve
+spring.datasource.password=t82ku7l80e5gs20q
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port = 5000
 
