--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.url=jdbc:mysql://localhost:3306/carlos?serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://d3y0lbg7abxmbuoi.chr7pe7iynqr.eu-west-1.rds.amazonaws.com:3306/xsjyd7r8ij58tnac?serverTimezone=UTC  
+spring.datasource.url=jdbc: mysql://b926a640ac87ae:4f0502ea@us-cdbr-east-03.cleardb.com/heroku_ca820193a4914a8?reconnect=true
 #spring.datasource.url= jdbc:mysql://localhost:3306/db?useSLL=false&serverTimezone=UTC&useLegacyDateTimeCode=false
 
 #username and password de la base de datos
@@ -13,6 +13,8 @@ spring.jpa.show-sql = true
 
 #Actualiza la base de datos y crea la entidad
 spring.jpa.hibernate.ddl-auto = update
+
+#site.api-url="https://api-spring-mysql-crud-vacunas.herokuapp.com/"
 
 #generate optimization hibernate SQL
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
