--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,9 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PracticaVacunas</name>
 	<description>Proyecto sobre las vacunas contra el COVID-19</description>
+	<properties>
+		<java.version>11</java.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
